# phi-2-ft

./: .gitignore  README.md  pyproject.toml
data/: st_set3_collectorgs25_speakergs207_0_9.json  train.jsonl  train2.jsonl  train_andong.jsonl  train_andong_cleaned.jsonl  train_andong_cleaned_10.jsonl
models/qlora-phi2/checkpoint-3/: adapter_config.json  rng_state.pth  scheduler.pt  tokenizer.json  trainer_state.json
scripts/: filter_saturi_data.py  inference.py  interface_phi2.py  process_saturi.py  remove_fields.py  train.py
