[project]
name = "phi-2-ft"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "ppabam", email = "tom@diginori.com"},
]
dependencies = ["transformers>=4.52.4", "datasets>=3.6.0", "accelerate>=1.8.1", "peft>=0.15.2", "bitsandbytes>=0.46.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
]
